fixing css height to avoid scrollbars

--- a/public/css/forecast.css
+++ b/public/css/forecast.css
@@ -74,7 +74,7 @@
 	overflow: hidden;
 	float: left;
 	border: 2px solid;
-	height: 100%;
+	height: 98%;
 }
 
 .forecastImage {
